[project]
name = "ComfyUI-Artha-Nodes"
description = "ComfyUI custom nodes for general purposes."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Cyrostar/ComfyUI-Artha-Nodes"

[tool.comfy]
PublisherId = "cyrostar"
DisplayName = "ComfyUI-Artha-Nodes"
Icon = "https://raw.githubusercontent.com/Cyrostar/ComfyUI-Artha-Nodes/refs/heads/main/web/js/img/arthanodesicon.png"
Banner = "https://raw.githubusercontent.com/Cyrostar/ComfyUI-Artha-Nodes/refs/heads/main/web/js/img/arthanodesbanner.png"
